[gd_scene load_steps=2 format=3 uid="uid://cfskcc5ogdwsp"]

[ext_resource type="Script" uid="uid://dygovx2d8g7wq" path="res://main_menu.gd" id="1_06t4h"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_06t4h")

[node name="MainMenuPanel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenuPanel"]
layout_mode = 2

[node name="StartGameButton" type="Button" parent="MainMenuPanel/VBoxContainer"]
layout_mode = 2
text = "Start Game"

[node name="LevelSelectButton" type="Button" parent="MainMenuPanel/VBoxContainer"]
layout_mode = 2
text = "Level Select"

[node name="AudioButton" type="Button" parent="MainMenuPanel/VBoxContainer"]
layout_mode = 2
text = "Audio"

[node name="QuitButton" type="Button" parent="MainMenuPanel/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="AudioMenuPanel" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -68.5
offset_bottom = 68.5
grow_horizontal = 2
grow_vertical = 2

[node name="AudioPanel" type="VBoxContainer" parent="AudioMenuPanel"]
layout_mode = 2

[node name="MasterLabel" type="Label" parent="AudioMenuPanel/AudioPanel"]
layout_mode = 2
size_flags_vertical = 0
text = "Master"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MasterSlider" type="HSlider" parent="AudioMenuPanel/AudioPanel"]
layout_mode = 2
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 1.0

[node name="Music-Label" type="Label" parent="AudioMenuPanel/AudioPanel"]
layout_mode = 2
size_flags_vertical = 0
text = "Music"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MusicSlider" type="HSlider" parent="AudioMenuPanel/AudioPanel"]
layout_mode = 2
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 1.0

[node name="SFX-Label" type="Label" parent="AudioMenuPanel/AudioPanel"]
layout_mode = 2
size_flags_vertical = 0
text = "SFX"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SFXSlider" type="HSlider" parent="AudioMenuPanel/AudioPanel"]
layout_mode = 2
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 1.0

[node name="BackButton" type="Button" parent="AudioMenuPanel/AudioPanel"]
layout_mode = 2
text = "Back"

[node name="LevelGridPanel" type="PanelContainer" parent="."]
visible = false
layout_mode = 2
offset_right = 500.0
offset_bottom = 500.0

[node name="MarginContainer" type="MarginContainer" parent="LevelGridPanel"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="GridContainer" type="GridContainer" parent="LevelGridPanel/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
columns = 3

[node name="Level1Button" type="Button" parent="LevelGridPanel/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Level
1"
icon_alignment = 1

[node name="Level2Button" type="Button" parent="LevelGridPanel/MarginContainer/GridContainer"]
layout_mode = 2
text = "Level
2"

[node name="Level3Button" type="Button" parent="LevelGridPanel/MarginContainer/GridContainer"]
layout_mode = 2
text = "Level
3"

[node name="BackFromLevelSelectButton" type="Button" parent="LevelGridPanel/MarginContainer/GridContainer"]
layout_mode = 2
text = "Back"

[connection signal="pressed" from="MainMenuPanel/VBoxContainer/StartGameButton" to="." method="_on_start_game_button_pressed"]
[connection signal="pressed" from="MainMenuPanel/VBoxContainer/LevelSelectButton" to="." method="_on_level_select_button_pressed"]
[connection signal="pressed" from="MainMenuPanel/VBoxContainer/AudioButton" to="." method="_on_audio_button_pressed"]
[connection signal="pressed" from="MainMenuPanel/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="value_changed" from="AudioMenuPanel/AudioPanel/MasterSlider" to="." method="_on_master_slider_value_changed"]
[connection signal="value_changed" from="AudioMenuPanel/AudioPanel/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="AudioMenuPanel/AudioPanel/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="pressed" from="AudioMenuPanel/AudioPanel/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="LevelGridPanel/MarginContainer/GridContainer/Level1Button" to="." method="_on_level_1_button_pressed"]
[connection signal="pressed" from="LevelGridPanel/MarginContainer/GridContainer/Level2Button" to="." method="_on_level_2_button_pressed"]
[connection signal="pressed" from="LevelGridPanel/MarginContainer/GridContainer/Level3Button" to="." method="_on_level_3_button_pressed"]
[connection signal="pressed" from="LevelGridPanel/MarginContainer/GridContainer/BackFromLevelSelectButton" to="." method="_on_back_from_level_select_button_pressed"]
